--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./maket.css" />
+    <link rel="stylesheet" href="./adaptive_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./adaptive_style.css" />
+
     <title>Document</title>
   </head>
   <body>
-    <img src="./assets/bg_img_1.png" alt="error404" class="bg_gradient" />
-    <img src="./assets/bg_img_2.png" alt="error404" class="bg_gradient" />
-    <img src="./assets/bg_img_3.png" alt="error404" class="bg_gradient" />
-    <img src="./assets/bg_img_4.png" alt="error404" class="bg_gradient" />
-
+    <img src="./assets/bg_img_1.png" alt="error" class="bg_gradient" />
+    <img src="./assets/bg_img_2.png" alt="error" class="bg_gradient" />
+    <img src="./assets/bg_img_3.png" alt="error" class="bg_gradient" />
+    <img src="./assets/bg_img_4.png" alt="error" class="bg_gradient" />
     <div class="container">
-      <!-- burger strt  -->
+      <!-- burger start  -->
+
       <div class="burger-menu">
         <div class="burger-menu__content">
           <img
@@ -30,31 +31,33 @@
             class="burger-menu__btn_close"
           />
           <input type="text" class="burger-menu__input" />
+
           <ul class="burger-menu__list">
-            <li class="burger-menu__item"><a href="#">home</a></li>
-            <li class="burger-menu__item"><a href="#">servises</a></li>
-            <li class="burger-menu__item"><a href="#">our project</a></li>
-            <li class="burger-menu__item"><a href="#">about us</a></li>
+            <li class="burger-menu__item"><a href="#">Home</a></li>
+            <li class="burger-menu__item"><a href="#">Services</a></li>
+            <li class="burger-menu__item"><a href="#">Our Project</a></li>
+            <li class="burger-menu__item"><a href="#">About Us</a></li>
           </ul>
         </div>
       </div>
-      <!-- navbar start -->
 
+      <!-- burger end  -->
+
+      <!-- navbar start  -->
       <div class="navbar">
-        <img src="./assets/logo-svg.svg" alt="error404" class="novbar__logo" />
-        <ul class="novbar__list">
-          <li class="list_item"><a href="#">home</a></li>
-          <li class="list_item"><a href="#">servises</a></li>
-          <li class="list_item"><a href="#">our project</a></li>
-          <li class="list_item"><a href="#">about us</a></li>
+        <img src="./assets/logo-svg.svg" alt="" class="navbar__logo" />
+        <ul class="navbar__list">
+          <li class="list__item"><a href="#">Home</a></li>
+          <li class="list__item"><a href="#">Services</a></li>
+          <li class="list__item"><a href="#">Our Project</a></li>
+          <li class="list__item"><a href="#">About Us</a></li>
         </ul>
         <input type="text" class="navbar__input" />
         <img src="./assets/navbar_btn.png" alt="" class="navbar__btn_burger" />
       </div>
-
       <!-- navbar end -->
 
-      <!-- header start -->
+      <!-- header start  -->
       <header>
         <div class="header__block_left">
           <h1 class="header__title_left">Build Your Awesome Platform</h1>
@@ -64,7 +67,7 @@
             those of you who use our services.
           </p>
           <button class="header__btn">
-            our servises
+            Our Services
             <img src="./assets/btn_icon.png" alt="" class="btn__icon" />
           </button>
         </div>
@@ -96,7 +99,9 @@
           />
         </div>
       </header>
-      <!-- servises block start  -->
+
+      <!-- services block start -->
+
       <div class="services">
         <h2 class="services__title_main">The Service We Provide For You</h2>
         <ul class="services__list">
@@ -117,10 +122,9 @@
               alt=""
               class="services__icon"
             />
-            <h4 class="services__title">UI/UX Designer</h4>
+            <h4 class="services__title">Development</h4>
             <p class="services__desc">
-              We provide UI/UX Design services, and of course with the best
-              quality
+              Create a platform with the best and coolest quality from u
             </p>
           </li>
           <li class="services__item">
@@ -129,9 +133,9 @@
               alt=""
               class="services__icon"
             />
-            <h4 class="services__title">Graphik Designer</h4>
+            <h4 class="services__title">Development</h4>
             <p class="services__desc">
-              We provide Graphic Design services, with the best designers
+              Create a platform with the best and coolest quality from u
             </p>
           </li>
           <li class="services__item">
@@ -140,9 +144,9 @@
               alt=""
               class="services__icon"
             />
-            <h4 class="services__title">Motion Graphik</h4>
+            <h4 class="services__title">Development</h4>
             <p class="services__desc">
-              Create a platform with the best and coolest quality from us.
+              Create a platform with the best and coolest quality from u
             </p>
           </li>
           <li class="services__item">
@@ -151,10 +155,9 @@
               alt=""
               class="services__icon"
             />
-            <h4 class="services__title">Photography</h4>
+            <h4 class="services__title">Development</h4>
             <p class="services__desc">
-              We provide Photography services, and of course with the best
-              quality
+              Create a platform with the best and coolest quality from u
             </p>
           </li>
           <li class="services__item">
@@ -163,20 +166,23 @@
               alt=""
               class="services__icon"
             />
-            <h4 class="services__title">Videography</h4>
+            <h4 class="services__title">Development</h4>
             <p class="services__desc">
-              Create a platform with the best and coolest quality from us.
+              Create a platform with the best and coolest quality from u
             </p>
           </li>
         </ul>
       </div>
 
-      <!-- servises block end  -->
+      <!-- services block end -->
 
-      <!-- block portfolio start  -->
+      <!-- portfolio block start -->
+
       <div class="portfolio">
-        <h2 class="portfolio__title">our awesome portfolio</h2>
+        <h2 class="portfolio__title">Our Awesome Portfolio</h2>
         <ul class="portfolio__list">
+          <!-- li.portfolio__item*3 -->
+
           <li class="portfolio__item">
             <img src="./assets/portfolio_img_1.png" alt="" />
           </li>
@@ -195,7 +201,7 @@
         />
       </div>
 
-      <!-- block portfolio end  -->
+      <!-- portfolio block end  -->
 
       <!-- info block start  -->
 
@@ -203,21 +209,27 @@
         <h2 class="info__block_title">
           Contact us for the service you want to use
         </h2>
-        <button class="info__block_btn">contact us</button>
+        <button class="info__block_btn">Contact us</button>
       </div>
 
-      <!-- info block end  -->
+      <!-- info block end -->
 
       <!-- footer block start  -->
+
       <footer>
+        <!-- img.footer__logo  -->
         <img src="./assets/logo-svg.svg" alt="" class="footer__logo" />
+        <!-- ul.footer__list  -->
         <ul class="footer__list">
+          <!-- li.footer__item*3 -->
           <li class="footer__item">Support</li>
           <li class="footer__item">Privacy Policy</li>
           <li class="footer__item">Terms and Conditions</li>
         </ul>
         <p class="footer__info">© 2022 Enver, All Rights Reserved</p>
       </footer>
+
+      <!-- footer block end  -->
     </div>
 
     <script>
